--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,10 @@
         {% endif %}
 
         {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+        <ul class="sidebar">
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/" class="button">Home</a></li>
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Curriculum Vitae</a></li>
+          li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Projects</a></li>
         </ul>
         {% endif %}
       </header>
