--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
         <ul class="sidebar">
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/" class="button">Home</a></li>
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Curriculum Vitae</a></li>
-          li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Projects</a></li>
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Projects</a></li>
         </ul>
         {% endif %}
       </header>
