--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/" class="button">Home</a></li>
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Curriculum Vitae</a></li>
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Projects/" class="button">Projects</a></li>
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Teaching/" class="button">Teaching</a></li>
         </ul>
         {% endif %}
       </header>
