--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,25 +25,22 @@ a {
 a:hover, a:focus {
   color: var(--links);
   font-weight: normal;
-  font-style: italic;
+  text-decoration: underline;
 }
 
 a small {
   font-size: 12px;
-  color: #CFB53B;
+  color: var(--links);
 }
 
 a:hover small {
   color: var(--links);
   font-weight: normal;
-  font-style: italic;
+  text-decoration: underline;
 }
 
 ul.downloads {
   background: #0A3161;
-}
-
-.downloads li {
 }
 
 .downloads a {
@@ -53,14 +50,10 @@ ul.downloads {
 
 .downloads a:hover, .downloads a:focus {
   color: var(--links);
-  font-weight: normal;
-  font-style: italic;
 }
 
 .downloads ul a:active {
   background-color: var(--links);
-  font-weight: normal;
-  font-style: italic;
 }
 
 small {
