--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,17 @@ h1, h2, h3, h4, h5, h6 {
   color: #222222;
 }
 
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+  color: var(--links);
+  font-weight: bold;
+}
+
+h1 a:hover, h1 a:focus, h2 a:hover, h2 a:focus, h3 a:hover, h3 a:focus, h4 a:hover, h4 a:focus, h5 a:hover, h5 a:focus, h6 a:hover, h6 a:focus {
+  color: var(--links);
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 a {
   color: var(--links);
 }
