--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,17 +5,17 @@
 
 :root {
 /* WV Blue: #0A3161, WV Gold: #CFB53B */
-  --links: #0A3161;
+  --links: #CFB53B;
 }
 
 body {
   background-color: #F5F5F5;
   font: 16px;
-  color: #444444;
+  color: #0A3161;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #222222;
+  color: #333333;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -48,10 +48,6 @@ a:hover small {
   color: var(--links);
   font-weight: normal;
   text-decoration: underline;
-}
-
-ul.downloads {
-  background: #0A3161;
 }
 
 .downloads a {
