--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,13 +5,13 @@
 
 :root {
 /* WV Blue: #0A3161, WV Gold: #CFB53B */
-  --links: #CFB53B;
+  --links: #0A3161;
 }
 
 body {
   background-color: #F5F5F5;
   font: 16px;
-  color: #0A3161;
+  color: #333333;
 }
 
 h1, h2, h3, h4, h5, h6 {
