--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,16 @@
 
         {% if site.show_downloads %}
         <ul class="sidebar">
+          <h3>Navigation</h3>
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/" class="button">Home</a></li>
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Curriculum Vitae</a></li>
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Projects/" class="button">Projects</a></li>
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Teaching/" class="button">Teaching</a></li>
+          <br>
+          <h3>Contact</h3>
+          <li><a href="mailto:jmlwhittington@ucf.edu" class="button">Academic email</a></li>
+          <li><a href="mailto:justin.ml.whittington@gmail.com" class="button">Professional email</a></li>
+          <li><a href="https://calendar.app.google/VtgEnNJabtWtJm4f7" class="button">Schedule a meeting</a></li>
         </ul>
         {% endif %}
       </header>
