--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
           <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Teaching/" class="button">Teaching</a></li>
           <br>
           <h3>Contact</h3>
-          <li><a href="mailto:jmlwhittington@ucf.edu" class="button">Academic email</a></li>
-          <li><a href="mailto:justin.ml.whittington@gmail.com" class="button">Professional email</a></li>
+          <li><a href="mailto:jmlwhittington@ucf.edu" class="button">Academic email (jmlwhittington@ucf.edu)</a></li>
+          <li><a href="mailto:justin.ml.whittington@gmail.com" class="button">Professional email (justin.ml.whittington@gmail.com)</a></li>
           <li><a href="https://calendar.app.google/VtgEnNJabtWtJm4f7" class="button">Schedule a meeting</a></li>
         </ul>
         {% endif %}
