--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,11 @@
           <li><a href="mailto:jmlwhittington@ucf.edu" class="button">Academic email (jmlwhittington@ucf.edu)</a></li>
           <li><a href="mailto:justin.ml.whittington@gmail.com" class="button">Professional email (justin.ml.whittington@gmail.com)</a></li>
           <li><a href="https://calendar.app.google/VtgEnNJabtWtJm4f7" class="button">Schedule a meeting</a></li>
+          <br>
+          <h3>Web presence</h3>
+          <li><a href="https://jmlwhittington.com/" class="button">Primary website</a></li>
+          <li><a href="https://www.linkedin.com/in/jmlwhittington/" class="button">LinkedIn</a></li>
+          <li><a href="https://github.com/jmlwhittington" class="button">GitHub</a></li>
         </ul>
         {% endif %}
       </header>
