--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
           <br>
           <h3>Contact</h3>
           <li><a href="mailto:jmlwhittington@ucf.edu" class="button">Academic email (jmlwhittington@ucf.edu)</a></li>
-          <li><a href="mailto:justin.ml.whittington@gmail.com" class="button">Professional email (justin.ml.whittington@gmail.com)</a></li>
+          <li><a href="mailto:justin.ml.whittington@gmail.com" class="button">Professional email (justin@whittington.tech)</a></li>
           <li><a href="https://calendar.app.google/VtgEnNJabtWtJm4f7" class="button">Schedule a meeting</a></li>
           <br>
           <h3>Web presence</h3>
