Removed nonfunctional button class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,20 +34,20 @@
         {% if site.show_downloads %}
         <ul class="sidebar">
           <h3>Navigation</h3>
-          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/" class="button">Home</a></li>
-          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/" class="button">Curriculum Vitae</a></li>
-          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Projects/" class="button">Projects</a></li>
-          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Teaching/" class="button">Teaching</a></li>
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/">Home</a></li>
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/CV/">Curriculum Vitae</a></li>
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Projects/">Projects</a></li>
+          <li><a href="https://jmlwhittington.github.io/TT_Website_Demo/Teaching/">Teaching</a></li>
           <br>
           <h3>Contact</h3>
-          <li><a href="mailto:jmlwhittington@ucf.edu" class="button">Academic email (jmlwhittington@ucf.edu)</a></li>
-          <li><a href="mailto:justin.ml.whittington@gmail.com" class="button">Professional email (justin@whittington.tech)</a></li>
-          <li><a href="https://calendar.app.google/VtgEnNJabtWtJm4f7" class="button">Schedule a meeting</a></li>
+          <li><a href="mailto:jmlwhittington@ucf.edu">Academic email (jmlwhittington@ucf.edu)</a></li>
+          <li><a href="mailto:justin.ml.whittington@gmail.com">Professional email (justin@whittington.tech)</a></li>
+          <li><a href="https://calendar.app.google/VtgEnNJabtWtJm4f7">Schedule a meeting</a></li>
           <br>
           <h3>Web presence</h3>
-          <li><a href="https://jmlwhittington.com/" class="button">Primary website</a></li>
-          <li><a href="https://www.linkedin.com/in/jmlwhittington/" class="button">LinkedIn</a></li>
-          <li><a href="https://github.com/jmlwhittington" class="button">GitHub</a></li>
+          <li><a href="https://jmlwhittington.com/">Primary website</a></li>
+          <li><a href="https://www.linkedin.com/in/jmlwhittington/">LinkedIn</a></li>
+          <li><a href="https://github.com/jmlwhittington">GitHub</a></li>
         </ul>
         {% endif %}
       </header>
